manifest-0.2.6.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    control-plane: binauthz-controller
  name: binauthz-system
---
apiVersion: v1
kind: Service
metadata:
  name: binauthz
  namespace: binauthz-system
spec:
  ports:
  - port: 443
    targetPort: 443
  selector:
    control-plane: binauthz-controller
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    control-plane: binauthz-controller
  name: binauthz-module-deployment
  namespace: binauthz-system
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: binauthz-controller
  template:
    metadata:
      labels:
        control-plane: binauthz-controller
    spec:
      containers:
      - args:
        - -secretname=binauthz-tls
        - -vwhname=binauthz-validating-webhook-configuration
        - -servicename=binauthz
        - -namespace=binauthz-system
        - -alsologtostderr
        image: gcr.io/anthos-baremetal-release/binauthz-controller:0.2.6
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 9090
        name: binauthz-module
        ports:
        - containerPort: 9090
          name: healthz
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: 9090
        volumeMounts:
        - mountPath: /etc/binauthz/tls
          name: binauthz-tls
          readOnly: true
        - mountPath: /var/run/secrets/tokens/gcp-ksa
          name: gcp-ksa
          readOnly: true
      serviceAccountName: binauthz-admin
      terminationGracePeriodSeconds: 60
      volumes:
      - name: binauthz-tls
        secret:
          secretName: binauthz-tls
      - name: gcp-ksa
        projected:
          defaultMode: 420
          sources:
          - serviceAccountToken:
              audience: db-dev-s5ke-fabric-ocp-dev.svc.id.goog
              expirationSeconds: 172800
              path: token
          - configMap:
              items:
              - key: config
                path: google-application-credentials.json
              name: binauthz-wi-config
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: binauthz-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: Cg==
    service:
      name: binauthz
      namespace: binauthz-system
      path: /admit
  failurePolicy: Ignore
  name: binaryauthorization.googleapis.com
  namespaceSelector:
    matchExpressions:
    - key: control-plane
      operator: DoesNotExist
  objectSelector:
    matchExpressions:
    - key: image-policy.k8s.io/break-glass
      operator: NotIn
      values:
      - "true"
    - key: alpha.image-policy.k8s.io/break-glass
      operator: NotIn
      values:
      - "true"
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - pods
    - pods/ephemeralcontainers
  sideEffects: None
